fix: ol gap CSS vars

--- a/src/sass/core/_elements.scss
+++ b/src/sass/core/_elements.scss
@@ -14,7 +14,7 @@
     padding: 0;
     display: flex;
     flex-direction: column;
-    gap: var(--neon-space-16);
+    gap: var(--neon-gap-ol);
 
     > li {
       max-width: var(--neon-max-paragraph-width);
